--- a/templates/expense_app/login.html
+++ b/templates/expense_app/login.html
@@ -6,7 +6,7 @@
           <div class="form-group">
           {% csrf_token %}
           <label for="username">Username:</label>
-          <input type="text" name="username" placeholder="Username">
+          <input type="text" name="username">
           <div class="row mt-3"></div>
           <label for="password">Password:</label>
           <input type="password" name="password">
