--- a/templates/expense_app/base.html
+++ b/templates/expense_app/base.html
@@ -16,7 +16,7 @@
                {% if user.is_authenticated %}
                <ul class="navbar-nav">
                   <li class="nav-item">
-                     <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
+                     <a class="nav-link" aria-current="page" href="{% url 'index' %}">Home</a>
                   </li>
                   <li class="nav-item">
                      <a class="nav-link" href="{% url 'expense_app:create_expense_record' %}">New Expense</a>
